Logo rendered wrong, svg fixed, dropdown menu added so navigation is possible now, layout fixed,color and contact us is now visible

--- a/BE/static/style-hungry.css
+++ b/BE/static/style-hungry.css
@@ -117,7 +117,6 @@ header {
 }
 
 footer {
-  background-color: var(--header-bg);
   box-shadow: 0 4px 6px rgba(0, 0, 0);
   text-align: center;
   padding: 2rem;
@@ -177,35 +176,40 @@ footer a:hover {
 }
 .results {
     margin: 1rem;
-    background-color: rgb(46, 46, 46);
     box-shadow: 0 4px 6px rgb(0, 0, 0);
     border-radius: 20px;
     padding: 20px;
-    color: white;
     max-height: 80rem;
     overflow-y: auto;
-    font-family: 'Namdhinggo', sans-serif;
 }
 
 
 /* Header */
 .dropdown-menu {
-	position: relative;
+    position: absolute;
+    right: 2rem;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.logo-index.scrolled .dropdown-menu {
+    opacity: 1;
+    pointer-events: auto;
 }
 .dropdown-content {
 	opacity: 0;
 	pointer-events: none;
-	transform: translateY(-10px);
 	transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
 
 	display: grid;
 	position: absolute;
-	background-color: rgb(51,51,51);
 	box-shadow: 0 4px 6px rgb(0, 0, 0);
-	padding: 0.5rem;
+	padding: 1rem;
 	border-radius: 20px;
-	right: 0;
-	width: max-content;
+	right: 0px;
+	width: 180px;
+    background-color: white;
 }
 .dropdown-content button{
 	margin: 1rem;
@@ -269,7 +273,7 @@ footer a:hover {
     width: 100%;
     height: var(--header-height, 100vh);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     padding-top: var(--logo-top-padding, 0vh);
@@ -278,10 +282,10 @@ footer a:hover {
     z-index: 1;
 }
 
-.logo-index img:not(.scroll-arrow) {
+.logo-image {
     width: var(--logo-width, 300px);
     height: auto;
-    transition: all 0.6s linear;
+    transition: all 0.3s linear;
 }
 
 .scroll-arrow {
@@ -291,14 +295,13 @@ footer a:hover {
     transform: translateX(-50%);
     width: 35px;
     height: auto;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.5s ease;
     animation: bounce 2s infinite;
     z-index: 2;
 }
 
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
-        /* You MUST keep the X centering here too! */
         transform: translateX(-50%) translateY(0);
     }
     40% {
@@ -332,28 +335,10 @@ footer a:hover {
     border-radius: 50%;
     object-fit: cover;
 }
-#loginBtn, #signupBtn, #homeBtn {
-    border: none;
-    padding: 10px 20px;
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-}
-
-#loginBtn:hover, #signupBtn:hover, #homeBtn:hover {
-    background-color: rgb(17, 17, 17);
-}
-
-
-
-
-
 
 #results {
     display: grid;
     grid-template-columns: 1fr; 
-    text-align: left;
-    font-family: 'Namdhinggo', sans-serif;
 }
 
 .food-card {
